--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         <!-- for the right side content -->
         <div>
           <div class="my-name">Thuong The Tran</div>
-          <div class="my-title">Computer Programmer/ Software Developer</div>
+          <div class="my-title">Data Management/ Application Developer</div>
           <div class="links">
             <div class="link-item">
               <img src="img/browser.svg" alt="" class="icon">
-              <a href="https://tran200376589.github.io/">https://tran200376589.github.io/</a>
+              <a href="https://tran200376589.github.io/thuongtran.github.io/">https://tran200376589.github.io/thuongtran.github.io/</a>
             </div>
             <div class="link-item">
               <img src="img/mail.svg" alt="" class="icon">
@@ -30,10 +30,10 @@
             </div>
             <div class="link-item">
               <img src="img/mobile-phone.svg" alt="" class="icon">
-              <a href="tel:249-989-2603">249-989-2603</a>
+              <a href="tel:249-989-2603">647-967-1368</a>
             </div>
           </div> <!-- end links -->
-          <p class="description"> I am interested in obtaining a Co-op position this summer within the Information Technology field as a Software Developer, Mainframe Developer, or Business Intelligence in order to broaden and improve my skills and knowledge.</p>
+          <p class="description"> I am interested in obtaining a 8-month Co-op position this fall within the Information Technology field as a Data Management, Application Developer or Business Intelligence in order to broaden and improve my skills and knowledge.</p>
         </div>
       </section>
 
@@ -112,7 +112,7 @@
                 Jan 2016 - April 2016
               </div>
             </div> <!-- end job title container -->
-            <p class="description">Courses: Linux, Networking Fundamentals, Windows, Math</p>
+            <p class="description">Courses: Linux, Networking Fundamentals, Windows</p>
           </div> <!-- end this job-->
 
           <div class="job">
