--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <div class="links">
             <div class="link-item">
               <img src="img/browser.svg" alt="" class="icon">
-              <a href="https://tran200376589.github.io/thuongtran.github.io/">https://tran200376589.github.io/thuongtran.github.io/</a>
+              <a href="https://tran200376589.github.io/">https://tran200376589.github.io/</a>
             </div>
             <div class="link-item">
               <img src="img/mail.svg" alt="" class="icon">
